--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
 <h>Hello World!</h>
 
-<div> bdrebing trying to commit something :p </div>
+<div> bdrebing trying to commit something or other :p </div>
 </body>
 </html>
