--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <h>Hello World!</h>
 
 <div> bdrebing trying to commit something or other :p </div>
-    <div> kebabcoc trying to commit something else </div>
+    <div> kebabcoc trying to commit something else or other </div>
 </body>
 </html>
